--- a/my_website/format.css
+++ b/my_website/format.css
@@ -1,8 +1,45 @@
 body{
-	background-color:#;
+	background-color:#ff7800;
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 	color: #ff5000;
-	background-image: url("images/city.jpg");
-	background-size: 100% 100%;
-    background-repeat: no-repeat;
+}
+
+h1 {
+	font-size: 1.5em;
+	text-align: center;
+}
+a:link, a:visited {
+    background-color: #ff8956;
+    color: white;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+table {
+	
+	width:80%;
+	margin-left: 2px;
+	margin-right: 2px;
+	text-align: center;
+	
+
+}
+
+td {
+	vertical-align: middle;
+}
+
+tr {
+	border: 1px solid #ffffff;
+	text-align: center;
+	background-color:#9FB6CD; 
+}
+
+th {
+	text-align: center;
+	color: #ffffff;
+	background-color: #003366;
 }
