--- a/my_website/format.css
+++ b/my_website/format.css
@@ -2,3 +2,32 @@ body {
 	background-color: #505050;
 	color: #ff5000;
 }
+
+a:href
+{
+	color: #ffa000;
+	background-color: #787878;
+	text-align: center;
+}
+
+
+a:link
+{
+	color: #ff5000;
+}
+
+a:visited
+{
+	color: #ff3200;
+}
+
+a:hover
+{
+	background-color: #787878;
+}
+
+
+table
+{
+	text-align: center
+}
